# voc-collector-serp

./: .gitignore  README.txt
backend/: .env.example  check_imports.py  config.py  main.py  main_exe.py  market_config.py  paths.py  reporter.py  requirements.txt  verifier.py  voc-backend.spec
backend/agent/: analyzer.py  evaluator.py  executor.py  loop.py  planner.py  state.py  synthesizer.py
backend/collectors/: base.py  google_search.py  reddit.py  serpapi_cache.py  serpapi_engine_configs.py  serpapi_models.py  serpapi_search.py  source_registry.py  web_reader.py  youtube.py
backend/models/: database.py  schemas.py
backend/routers/: agent.py  projects.py  reports.py
backend/templates/: report_detailed.html  report_executive.html  report_premium.html  report_standard.html
backend/tests/: test_detect_script.py  test_integration_dry_run.py  test_serpapi_models.py
docs/: .bkit-memory.json
docs/03-analysis/: voc-planner-harness.analysis.md
docs/archive/2026-04/: _INDEX.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AgentTimeline.tsx  SettingsPanel.tsx  VocCard.tsx
frontend/src/hooks/: useAgentStream.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AgentPage.tsx  HomePage.tsx  ReportPage.tsx  ReviewPage.tsx
scripts/: build-all.ps1  build-backend.ps1  capture_fixtures.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+16 files in other folders)
